--- a/spar_data_analysis_IPP.Rmd
+++ b/spar_data_analysis_IPP.Rmd
@@ -85,7 +85,293 @@ stopifnot(identical(targets_file$sample_name,names(dt)[3:length(names(dt))]))
 dt %>% write_tsv(str_glue("{dat_path}/raw_reads_{todate}_{my_exp}_SPAR.txt"))
 ```
 
+## Perform various Filtering Methods: EdgeR, NOIseq
+```{r}
+# load dataset ----
+DT <- fread(list.files(path = dat_path, pattern = "raw", full.names = TRUE ))
+suppressPackageStartupMessages({library('edgeR')
+  library('NOIseq')})# there is a problem loading it 
+# I load it manually 
+suppressPackageStartupMessages(library('rafalib'))
+stopifnot(identical(as.character(targets_file$sample_name),names(dt)[3:length(names(dt))]))
+# exploratory analysis with NOISeq -----
+mybiotypes <-  dt$GeneClass
+names(mybiotypes) <-  dt$smallRNA
 
+# make the matrix  
+mat <- dt %>%
+  select(-GeneClass) %>%
+  column_to_rownames("smallRNA") %>%
+  as.matrix()
+# make clearer names
+colnames(mat) <-  colnames(mat)  %>% 
+  str_replace("Control","Ctrl")
+
+targets_file$Run <- colnames(mat)
+
+# NOISeq dataset
+mydata <- readData(data = mat, factors = as.data.frame(targets_file), biotype = mybiotypes)
+
+mybiodetection <- dat(mydata, k = 0, type = "biodetection", factor = NULL)
+par(mfrow = c(1, 2))
+explo.plot(mybiodetection, samples = c(1,3), toplot = "piRNA",plottype = "comparison")
+mycountsbio <- dat(mydata, factor = NULL, type = "countsbio")
+par(mfrow = c(1,1 ))
+
+pdf(str_glue("{dat_path}/biodetection_expression_{todate}_{my_exp}.pdf"))
+sapply(seq(ncol(mat)) ,function(x){
+explo.plot(mycountsbio, toplot = 2, samples = x, plottype = "boxplot")
+})
+dev.off()
+
+# filtering with NOISEq  -----
+noiL <- as.list(1L:3)
+names(noiL) <- c("cpm", "Wilcoxon", "Prop")
+NOISeq_filt <- lapply(noiL, function(x) NOISeq::filtered.data(mat, 
+        factor = targets_file$group,
+        norm = FALSE, 
+        method = x, cv.cutoff=100, cpm=1))
+
+# create the design matrix  -----
+design <- model.matrix(~0+ targets_file$group + targets_file$batch)
+colnames(design) <- colnames(design) %>% 
+  str_remove("targets_file\\$") %>% 
+  str_remove("group")
+
+rownames(design) <- targets_file$group
+
+# create the DGElist ----
+dgl <- DGEList(counts = mat,
+               samples = targets_file,
+               lib.size = colSums(mat),
+               norm.factors = rep(1,ncol(mat)))
+
+# filterwith EdgeR ----
+keep.exprs <- filterByExpr.DGEList(dgl, design = design)
+dgl_filt <- dgl[keep.exprs,,keep.lib.sizes=FALSE]
+
+dim(dgl);dim(dgl_filt)
+str_glue( "Starting features: {nrow(dgl)}\nedgeR filter, remaining features: {nrow(dgl_filt)}\nCPM approach, remaining features: {nrow(NOISeq_filt[[1]])}\nWilcoxon filter, remaining features: {nrow(NOISeq_filt[[2]])}\nProportion approach filter, remaining features: {nrow(NOISeq_filt[[3]])}")
+
+# if we want to keep noiseq filter instead of edger but use edger object ----
+filte_Nois <- dgl[rownames(dgl$counts) %in% rownames(NOISeq_filt[[i]]),,keep.lib.sizes=FALSE]
+
+dgl_filt <- DGEList(counts = NOISeq_filt[[i]],
+               samples = targets_file,
+               lib.size = colSums(NOISeq_filt[[i]]),
+               norm.factors = rep(1,ncol(NOISeq_filt[[i]])))
+
+# finally give colours to samples ----
+suppressPackageStartupMessages(library('wesanderson'))
+pal1 <- wes_palette(length(levels(as_factor(targets_file$group))),
+                    name = "Darjeeling1", type = "discrete") %>%
+  enframe(name = NULL) %>%
+  mutate(
+    group = as_factor(levels(targets_file$group)))
+
+# add color to the DGEList 
+dgl_filt$colours <- inner_join(dgl_filt$samples,pal1,by= "group")$value
+
+# plot RLE and other functions from EDASeq ----
+suppressPackageStartupMessages(library('EDASeq'))
+par(mar=c(8,4,4,2))
+EDASeq::plotRLE(dgl_filt$counts, col=dgl_filt$colours, 
+                outline=FALSE,las = 2, ylab="Relative Log Expression", 
+                cex.axis=1, cex.lab=1, )
+EDASeq::plotPCA(dgl_filt$counts, 
+                col = dgl_filt$colours, cex=1, cex.axis=1, cex.lab=1)
+
+dataEDA <- EDASeq::newSeqExpressionSet(counts = dgl_filt$counts, 
+  phenoData = as.data.frame(dgl_filt$samples, row.names = rownames(dgl_filt$samples)))
+EDASeq::meanVarPlot(dataEDA, log=TRUE, ylim=c(0,16))
+EDASeq::biasPlot(dataEDA, "gc", log=TRUE, ylim=c(1,5))
+```
+## histogram
+```{r}
+AveLogCpm_Raw_Data <- aveLogCPM(dgl)
+AveLogCpm_Filtered_Data <-aveLogCPM(dgl_filt)
+
+par(mfrow=c(1,2))
+
+pdf(str_glue("{dat_path}/histogram_plot_{todate}_{my_exp}.pdf"))
+hist(AveLogCpm_Raw_Data)
+hist(AveLogCpm_Filtered_Data)
+dev.off()
+```
+
+## proceed with the normalization
+```{r}
+# not normalized
+cpm_unorm <- cpm(dgl_filt,log=F,prior.count=5)
+lcpm_unorm <- cpm(dgl_filt,log=TRUE,prior.count=5)
+# EDA norm ----
+dataOffset <- betweenLaneNormalization(dataEDA,
+                                       which="upper",offset=TRUE)
+
+EDASeq::meanVarPlot(dataOffset, log=TRUE, ylim=c(0,16))
+# edgeR  ----
+norm_method <- list("none" = "none", 
+                  "TMM" = "TMM",
+                  "TMMwsp" = "TMMwsp",
+                  "RLE" = "RLE" )
+edger_norm <- lapply(norm_method, function(x){
+  calcNormFactors(dgl_filt, method = x)
+})
+
+#x1_TMM <- calcNormFactors(dgl_filt, method = "TMM")
+#cpm_TMM <- cpm(x1_TMM,normalized.lib.sizes = TRUE)
+#lcpm_TMM <- cpm(x1_TMM,normalized.lib.sizes = TRUE, log=TRUE, prior.count=5)
+
+# voom with quality weights ----
+voomQW_norm <- mapply(function(x, i)
+  voomWithQualityWeights(x, design = design, plot = TRUE, 
+                         normalize.method = i), edger_norm[1:3], 
+  c("quantile", rep("none",2)), SIMPLIFY = FALSE 
+)
+# create list of normalized data ------
+norm_list <- list("Not normalized" = cpm(edger_norm[[1]],normalized.lib.sizes = TRUE), 
+                  "EDA_upperQ" = dataOffset, 
+                  "TMM" = cpm(edger_norm[[2]],normalized.lib.sizes = TRUE),
+                  "TMMwsp" = cpm(edger_norm[[3]],normalized.lib.sizes = TRUE), 
+                  "RLE"  = cpm(edger_norm[[4]],normalized.lib.sizes = TRUE),
+                  "voom_Quantile" = 2^voomQW_norm[[1]]$E,
+                  "voom_TMM" = 2^voomQW_norm[[2]]$E,
+                  "voom_TMMwsp" = 2^voomQW_norm[[3]]$E)
+
+pdf(str_glue("{dat_path}/RLE_plots_{todate}_{my_exp}.pdf"))
+
+sapply(seq_along(norm_list) ,function(x, n, i){ 
+       EDASeq::plotRLE(x[[i]], col=dgl_filt$colours,
+                       outline=FALSE, las=3, 
+                       ylab="Relative Log Expression", 
+                       cex.axis=1, cex.lab=1, main = str_glue("{n[[i]]}"));
+  legend("topright",
+       legend= levels(as_factor(dgl_filt$samples$group)),
+       fill = levels(as_factor(dgl_filt$colours)),
+       bty="n",
+       cex = 0.5, inset = c(.01,.01) )}, x = norm_list, n = names(norm_list))
+dev.off()
+
+#cpm_TMM <- cpm(x1_TMM,normalized.lib.sizes = TRUE, prior.count=5)
+
+```
+# make h-clustering
+```{r Hierarchical clustering}
+norm_l <- list(
+               "unorm" = cpm(edger_norm[[1]],normalized.lib.sizes = TRUE, log=TRUE, prior.count=5),
+               "TMM" = cpm(edger_norm[[2]],normalized.lib.sizes = TRUE, log=TRUE, prior.count=5),
+               "TMMwsp" = cpm(edger_norm[[3]],normalized.lib.sizes = TRUE, log=TRUE, prior.count=5),
+               "voomQ_QW" = voomQW_norm[[1]]$E,
+               "voomTMM_QW" = voomQW_norm[[2]]$E,
+               "voomTMMwsp_QW" = voomQW_norm[[3]]$E)
+
+hc_methods <- c("ward.D2",
+                #"single","median", "centroid","mcquitty")
+                "complete",
+                "average")
+                
+l_d <- lapply(norm_l,function(x)dist(t(x)))
+
+l_hc <- sapply(hc_methods, function(x) lapply(l_d, function(y) hclust(y,method = x)))
+
+names(l_hc) <- rep(rownames(l_hc),times = ncol(l_hc))
+
+pdf(str_glue("{dat_path}/hierarchic_clust_{todate}_{my_exp}.pdf"))
+for (i in seq_along(l_hc)) {
+  myplclust(l_hc[[i]],
+            lab.col = dgl_filt$colours, #x1$colours,pal1$value
+            #labels = dgl_filt$samples$ ,  
+       xlab = str_glue("{names(l_hc[i])}"),
+       main = str_glue("{enframe(l_hc[[i]])$value[7]} - {enframe(l_hc[[i]])$value[5]} - group"))
+  legend("topright",
+       legend = levels(as_factor(dgl_filt$samples$group)),
+       fill = levels(as_factor(dgl_filt$colours)), #x1$colours  
+       bty="n",
+       cex = 0.9)
+}
+dev.off()
+```
+## make MDS plot
+```{r}
+par(mfrow=c(2,2))
+par(mar=c(6,5,2,1)+ 0.1)
+
+pdf(str_glue("{dat_path}/MDS_plot_{todate}_{my_exp}.pdf"))
+
+plotMDS(norm_l[[4]],labels = ,
+                col=dgl_filt$colours,dim.plot = c(1,2))
+legend("topright",
+       legend= levels(targets_file$group),
+       fill = levels(as_factor(dgl_filt$colours)),
+       bty="n",
+       cex = 1.5, inset = c(.01,.09) )
+
+plotMDS(norm_l[[4]], labels = ,
+                col=dgl_filt$colours,dim.plot = c(3,4),main="MDS plot")
+
+plotMDS(norm_l[[4]], labels = ,
+                col=dgl_filt$colours,dim.plot = c(1,3),main="MDS plot")
+
+plotMDS(norm_l[[4]], labels = ,
+                col=dgl_filt$colours,dim.plot = c(2,3),main="MDS plot")
+plotMDS(norm_l[[4]], labels = ,
+                col=dgl_filt$colours,dim.plot = c(2,4),main="MDS plot")
+dev.off()
+```
+
+## make PCA plot
+```{r}
+suppressPackageStartupMessages(library(DESeq2))
+# make the Deseq dataset -----
+dds <- DESeqDataSetFromMatrix(countData = round(dgl_filt$counts),
+                              colData = targets_file,
+                              design = ~ group )
+dds$group <- relevel(dds$group, ref = "Control")
+
+#vst -----
+vsd <- vst(dds, blind = FALSE)
+
+head(assay(vsd), 3)
+
+sampleDists <- dist(t(assay(vsd)))
+sampleDistMatrix <- as.matrix( sampleDists )
+suppressPackageStartupMessages({
+library("pheatmap")
+library("RColorBrewer")})
+sampleDistMatrix <- as.matrix( sampleDists )
+rownames(sampleDistMatrix) <- paste( vsd$Run, vsd$group, sep = " - " )
+colnames(sampleDistMatrix) <- NULL
+colors <- colorRampPalette( rev(brewer.pal(9, "Blues")) )(255)
+pheatmap(sampleDistMatrix,
+         clustering_distance_rows = sampleDists,
+         clustering_distance_cols = sampleDists,
+         col = colors)
+#rlog -----
+rld <- rlog(dds, blind = FALSE)
+
+dds1 <- estimateSizeFactors(dds)
+# check the transformations -----
+df <- bind_rows(
+  as_tibble(log2(counts(dds1, normalized=TRUE)[, 1:2]+1)) %>%
+    mutate(transformation = "log2(x + 1)"),
+  as_tibble(assay(vsd)[, 1:2]) %>% mutate(transformation = "vst"),
+  as_tibble(assay(rld)[, 1:2]) %>% mutate(transformation = "rlog"))
+
+colnames(df)[1:2] <- c("x", "y")  
+# plot them
+ggplot(df, aes(x = x, y = y)) + geom_hex(bins = 80) +
+  coord_fixed() + facet_grid( . ~ transformation)  
+# PCA -----
+pdf(str_glue("{dat_path}/PCA_plot_{todate}_{my_exp}.pdf"))
+DESeq2::plotPCA(vsd, intgroup = "group")
+dev.off()
+# MDS -----
+mds <- as.data.frame(colData(vsd))  %>%
+  cbind(cmdscale(sampleDistMatrix))
+ggplot(mds, aes(x = `1`, y = `2`, color = group)) +
+  geom_point(size = 3) + coord_fixed()
+
+```
 
 
 
