--- a/spar_data_analysis_IPP.Rmd
+++ b/spar_data_analysis_IPP.Rmd
@@ -580,6 +580,119 @@ DEseq_IPP <- C_D2 %>%
   filter(!GeneID %in% INPUT_D2$GeneID) %>% 
   select(GeneID, C_log2FoldChange, C_padj, N_log2FoldChange, N_padj)
 ```
+#test Granges plyr
+```{r}
+BiocManager::install("plyranges")
+library(plyranges)
+
+# toy samples taken/modified from BiocWorkshops/fluent-genomic-data-analysis-with-plyranges
+    set.seed(42)
+    pos <- sample(1:10000, size = 100)
+    size <- sample(10:50, size = 100, replace = TRUE)
+    strand <- sample(c("+","-"), size = 100, replace = TRUE)
+    rep1 <- data.frame(seqnames = "chr1", 
+                  start = pos,
+                  width = size,
+                  strand =strand, 
+                  counts = round(rnorm(100, mean = 100,sd = 20)))
+    rep1 <- as_granges(rep1) 
+    seqlengths(rep1) <- 248956422
+    genome(rep1) <- "hg38"
+    rep2 <- rep1 %>% anchor_center %>% mutate(width = width / 2, counts = counts + 100 ) %>% shift_downstream(8L)
+    rep3 <- rep1 %>% shift_upstream(11L) %>% mutate(counts = counts / 2)
+    rep4 <- rep3 %>% anchor_start() %>% mutate(width = width * 1.3, counts = counts + 1000 ) %>% shift_downstream(7L)
+    rep4[c(1 , 50:70)] <- rep2[c(1, 50:70)] %>% shift_downstream(10L)
+    rep5 <- rep4 %>% anchor_center() %>% mutate(width = width * 1.5)
+    rep5[c(10:30)] <- rep2[c(20:40)] %>% anchor_center() %>% mutate(width = width / 2)
+    intensities <- bind_ranges(rep1, rep2, rep3, rep4, .id = "replicate") %>%
+    arrange(start)
+    r1 <- intensities %>% group_by(strand,replicate) %>% reduce_ranges_directed() %>% as_tibble
+    r2 <- intensities %>% group_by(strand) %>%  reduce_ranges_directed() %>% as_tibble
+    r3 <- intensities %>% reduce_ranges_directed() %>% as_tibble
+    r4 <- intensities %>% group_by(strand,replicate) %>% reduce_ranges() %>% as_tibble
+    r5 <- intensities %>% group_by(strand) %>% reduce_ranges()%>% as_tibble
+    r6 <- intensities %>%  reduce_ranges()%>% as_tibble
+    sapply(list(r1,r2,r3,r4,r5,r6), nrow)
+    identical(r2$end,r3$end)
+
+    r3 <- intensities %>% reduce_ranges_directed()
+    rep1 <- rep1  %>%  select(rep_1_counts = "counts",everything()) %>% arrange(start)
+    rep2 <- rep2  %>%  select(rep_2_counts = "counts",everything()) %>% arrange(start)
+    r3 %>% join_overlap_left_directed( rep1 ) %>% 
+    mutate(rep_1_counts = replace_na(rep_1_counts,0)) %>%  
+      join_overlap_left_directed( rep2 ) %>% 
+      mutate(rep_2_counts = replace_na(rep_2_counts,0))
+
+# real data ------
+path <- "/home/0/R_virtual_shared_folder/3_IPP_PIWIL1/SPAR_results"
+smallRNA_files <- dir(path, full.names = TRUE,
+                      pattern = "peaks_unannot.with_con.+.xls",
+                      recursive = TRUE)
+DT <- rbindlist(sapply(smallRNA_files,fread,
+                       simplify=FALSE,
+                       #select = c(1,2,4,6),
+                       verbose=getOption("datatable.verbose", TRUE)),
+                use.names= TRUE,idcol="samples_file")  %>%
+  rename(peakChr = "#peakChr") %>% as_tibble %>% 
+  #filter(peakChr == "chr1") %>% 
+  mutate(samples_file = samples_file %>% str_remove(".+/3_IPP_PIWIL1/SPAR_results/") %>%
+  str_remove(".trimmed_.+") %>% 
+  str_remove(pattern = "COLO205_IPP_") %>%
+  str_remove(pattern = "noAb_")
+           )
+
+gr1 <- DT %>% select(samples_file:peakStrand) %>% 
+  select(-peakID) %>% 
+  as_granges(seqnames = peakChr,
+                         start = peakChrStart,
+                         end = peakChrEnd,
+                         strand = peakStrand) %>% arrange(start)
+seqlengths(gr1) <- 248956422
+genome(gr1) <- "hg38"
+
+t1 <- gr1 %>%  group_by(strand,samples_file) %>% 
+  reduce_ranges_directed() %>% arrange(start)%>% as_tibble
+t2 <- arrange(gr1, start) %>% group_by(strand) %>% 
+  reduce_ranges_directed()%>% as_tibble
+t3 <- arrange(gr1, start) %>%  
+  reduce_ranges_directed()%>% as_tibble
+t4 <- arrange(gr1, start) %>% group_by(strand,samples_file) %>% 
+  reduce_ranges()%>% as_tibble
+t5 <- arrange(gr1, start) %>% group_by(strand) %>% 
+  reduce_ranges()%>% as_tibble
+t6 <- arrange(gr1, start) %>% 
+  reduce_ranges()%>% as_tibble
+sapply(list(t1,t2,t3,t4,t5,t6), nrow)
+identical(t2$start,t3$start)
+
+
+samples_granges <- gr1$samples_file %>% enframe %>%  distinct(value) %>% arrange(value) 
+l_samples_granges <- samples_granges$value %>% as.list()
+
+grSamples <- lapply(l_samples_granges, function(x){
+  gr1  %>% filter(samples_file == x) %>% 
+  arrange(start)
+  names()}
+)
+
+C_Ab_1 <- gr1 %>% filter(samples_file == "C_Ab_1") %>% 
+  select(C_Ab_1_counts = "peakExpressionValue",everything()) %>% arrange(start)
+C_Ab_2 <- gr1 %>% filter(samples_file == "C_Ab_2") %>% 
+  select(C_Ab_2_counts = "peakExpressionValue",everything())%>% arrange(start)
+C_Ab_3 <- gr1 %>% filter(samples_file == "C_Ab_3") %>% 
+  select(C_Ab_3_counts = "peakExpressionValue",everything())%>% arrange(start)
+
+
+t3 %>% join_overlap_left_directed( C_Ab_1) %>% 
+  mutate(C_Ab_1_counts = replace_na(C_Ab_1_counts,0)) %>% 
+  select(-samples_file) %>% 
+  join_overlap_left_directed( C_Ab_2) %>% 
+  mutate(C_Ab_2_counts = replace_na(C_Ab_2_counts,0)) %>% 
+  select(-samples_file) %>% 
+  join_overlap_left_directed( C_Ab_3) %>% 
+  mutate(C_Ab_3_counts = replace_na(C_Ab_3_counts,0)) %>% 
+  select(-samples_file) 
+```
 
 
 
