--- a/spar_data_analysis_IPP.Rmd
+++ b/spar_data_analysis_IPP.Rmd
@@ -759,7 +759,7 @@ grSamples_l <- map(smpls_lst, ~ gr1  %>%
 
 map
 # join each sample with the reduced Granges of all samples
-test1<- t3 %>% 
+test1 <- t3 %>% 
   join_overlap_left_directed( grSamples_l[[1]]) %>% 
   join_overlap_left_directed( grSamples_l[[2]]) %>% 
   join_overlap_left_directed( grSamples_l[[3]]) %>% 
@@ -767,6 +767,17 @@ test1<- t3 %>%
   dplyr::mutate_at(dplyr::vars(dplyr::ends_with('peakExpr')), 
                    function(.) ifelse(is.na(.), 0, .)) %>% 
   select(-starts_with("samples_file"))
+
+my_reduced_Granges <- test1 %>% 
+  group_by(revmap) %>% 
+  reduce_ranges_directed
+my_median <- test1 %>% select(C_Ab_1_peakExpr, revmap) %>% as_tibble() %>% group_by(revmap) %>% 
+  summarize(C_Ab_1_peakExpr = median(C_Ab_1_peakExpr, na.rm = TRUE))
+
+my_1st_med <- my_reduced_Granges %>% 
+  as_tibble() %>% 
+  inner_join(my_median) %>% as_granges()
+
 system.time( 
   test1 <- test1 %>% 
  # filter(seqnames == "chr1") %>%
@@ -776,7 +787,19 @@ system.time(
     C_Ab_2_peakExpr = median(C_Ab_2_peakExpr, na.rm = TRUE),
     C_Ab_3_peakExpr = median(C_Ab_3_peakExpr, na.rm = TRUE))
 )
+
+ 
+  test2 <- test1 %>% 
+ filter(seqnames == "chr1") %>%
+  group_by(revmap) %>% 
+  reduce_ranges_directed(
+    C_Ab_1_peakExpr = median(C_Ab_1_peakExpr, na.rm = TRUE),
+    C_Ab_2_peakExpr = median(C_Ab_2_peakExpr, na.rm = TRUE),
+    C_Ab_3_peakExpr = median(C_Ab_3_peakExpr, na.rm = TRUE))
 test1 %>% filter(revmap == 29100)
+result_med_sliced <- my_1st_med %>% filter(seqnames == "chr1") %>% as_tibble() %>% select(revmap,C_Ab_1_peakExpr)
+result_med_test2 <-  test2 %>% as_tibble() %>% select(revmap,C_Ab_1_peakExpr)
+identical(result_med_sliced,result_med_test2)
 ```
 
 
